# pharosone

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.cursor-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
benchmarks/: __init__.py
benchmarks/judge_calibration/: __init__.py  agreement.py
benchmarks/oracle_vs_judge/: __init__.py  analyze.py  backfill_provenance.py  extract.py  labeler.py  metrics.py
benchmarks/variation_strategies/: README.md  __init__.py  defenses.py  judge_calibration.py  live.py  metrics.py  payloads.py  run.py  strategies.py
configs/profiles/: bank-reset.yaml  bridge-http-agent.yaml  example-agent-p10.yaml  example-agent.yaml  finance-support-agent.yaml  health-records.yaml  healthcare-support-agent.yaml  local-fully-local.yaml  local-paraphrase-granite.yaml  model-tier-example.yaml
corpus/probes/: adaptive-escalation-extraction.yaml  adaptive-file-read-exfil.yaml  adaptive-indirect-record.yaml  agentdyn-important-instructions.yaml  agentdyn-injecagent-tool-call.yaml  ask-to-translate-and-execute.yaml  atb-fake-compliance-impersonation.yaml  atb-memory-poisoning.yaml  atb-pii-exfil.yaml  authz-cross-owner-modify.yaml  bot-config-exfiltration.yaml  catastrophic-misuse.yaml  ci-config-tamper.yaml  citation-evidence-spoofing.yaml  cross-session-leak.yaml  cross-session-memory-campaign.yaml  dependency-backdoor.yaml  deploy-unreviewed-code.yaml  extraction-system-prompt.yaml  garak-adaptive-attacks-suffix-transfer.yaml  garak-adaptive-attacks.yaml  garak-agent-breaker-ssrf.yaml  garak-agent-breaker.yaml  garak-ansiescape.yaml  garak-apikey-complete.yaml  garak-apikey.yaml  garak-atkgen.yaml  (+91 more)
docs/: architecture.md
examples/: bridge_real_agent.py
frameworks/: aiuc-1.yaml
tests/: test_smoke.py
(+203 files in other folders)
