[project]
name = "pharosone-security-scanner"
version = "0.2.0"
description = "PharosOne Security Scanner — a behavioral vulnerability scanner (red-team) for AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "PharosOne", email = "dmitry@pharosone.ai" }]
maintainers = [{ name = "PharosOne", email = "dmitry@pharosone.ai" }]
keywords = [
    "ai-security",
    "red-team",
    "llm",
    "ai-agents",
    "inspect-ai",
    "vulnerability-scanner",
    "aiuc-1",
    "prompt-injection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "inspect-ai>=0.3.240",
    "jinja2>=3.1",
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "openai>=1.0",
    "anthropic>=0.40",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
probe-engine = "probe_engine.cli:app"

[project.urls]
Homepage = "https://pharosone.ai"
Documentation = "https://pharosone.ai"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/probe_engine"]
artifacts = [
    "src/probe_engine/onboarding/schemas/*.json",
    "src/probe_engine/scoring/judge_rubric.txt",  # calibrated logit-read judge instruction (loaded via importlib.resources)
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"
